cuda/ex1/logs/logs_scratch1/slurm.36670558.pascal001.err
  File "scratch1.py", line 30
    arr = np.ones((10,), dtype-=int)
                               ^
SyntaxError: invalid syntax
